knn HW in process

--- a/homeworks/assignment0_01_knn/assignment_knn_template.ipynb
+++ b/homeworks/assignment0_01_knn/assignment_knn_template.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -62,8 +62,104 @@
    "outputs": [],
    "source": [
     "class KNearestNeighbor:\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    \"\"\" a kNN classifier with L2 distance \"\"\"\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "        self.X_train = X\n",
+    "        self.y_train = y\n",
+    "\n",
+    "    def predict(self, X, k=1, num_loops=0):\n",
+    "        if num_loops == 0:\n",
+    "            dists = self.compute_distances_no_loops(X)\n",
+    "        elif num_loops == 1:\n",
+    "            dists = self.compute_distances_one_loop(X)\n",
+    "        elif num_loops == 2:\n",
+    "            dists = self.compute_distances_two_loops(X)\n",
+    "        else:\n",
+    "            raise ValueError('Invalid value %d for num_loops' % num_loops)\n",
+    "\n",
+    "        return self.predict_labels(dists, k=k)\n",
+    "\n",
+    "    def compute_distances_two_loops(self, X):\n",
+    "        num_test = X.shape[0]\n",
+    "        num_train = self.X_train.shape[0]\n",
+    "        dists = np.zeros((num_test, num_train))\n",
+    "                \n",
+    "        for i in range(num_test):\n",
+    "            for j in range(num_train):\n",
+    "                # 1. вычисляем разницу между векторами (D-размерности)\n",
+    "                diff = X[i, :] - self.X_train[j, :]\n",
+    "                \n",
+    "                # 2. вычисляем квадрат L2 расстояния \n",
+    "                squared_distance = np.sum(diff**2)\n",
+    "                \n",
+    "                # 3. берем квадратный корень (L2)\n",
+    "                dists[i, j] = np.sqrt(squared_distance)                             \n",
+    "        return dists\n",
+    "\n",
+    "    def compute_distances_one_loop(self, X):\n",
+    "\n",
+    "        num_test = X.shape[0]\n",
+    "        num_train = self.X_train.shape[0]\n",
+    "        dists = np.zeros((num_test, num_train))\n",
+    "        for i in range(num_test):            \n",
+    "            # 1 --- выбираем тестовую строку (1, D)\n",
+    "            test_point = X[i, :]\n",
+    "            \n",
+    "            # 2 --- вычисляем разницу\n",
+    "            diff = self.X_train - test_point\n",
+    "            sq_diff = np.sum(diff**2, axis=1)\n",
+    "            \n",
+    "            # 3 --- записываем\n",
+    "            dists[i, :] = np.sqrt(sq_diff)\n",
+    "\n",
+    "        return dists\n",
+    "\n",
+    "    def compute_distances_no_loops(self, X):\n",
+    "        num_test = X.shape[0]\n",
+    "        num_train = self.X_train.shape[0]\n",
+    "        dists = np.zeros((num_test, num_train))\n",
+    "                \n",
+    "        # 1 --- вычисляем квадрат L2 нормы для каждой точки \n",
+    "        sum_sq_test = np.sum(X**2, axis=1, keepdims=True)\n",
+    "        sum_sq_train = np.sum(self.X_train ** 2, axis=1, keepdims=True)\n",
+    "        \n",
+    "        # 2 --- вычисляем -2 * скаляр произ (-2 * A^T B)\n",
+    "        dot_product = -2 * np.dot(X, self.X_train.T)                \n",
+    "                \n",
+    "        # 3 --- считаем расстояние\n",
+    "        dists = sum_sq_test + sum_sq_train - dot_product  \n",
+    "        \n",
+    "        return dists\n",
+    "\n",
+    "    def predict_labels(self, dists, k=1):\n",
+    "        num_test = dists.shape[0]\n",
+    "        y_pred = np.zeros(num_test)\n",
+    "        for i in range(num_test):\n",
+    "\n",
+    "            \n",
+    "            # 1 --- находим индексы k ближайших соседей для i-й тестовой точки.\n",
+    "            closest_indices = np.argsort(dists[i, :])[:k]\n",
+    "            \n",
+    "            # 2 --- используем self.y_train для получения меток по найденным индексам.\n",
+    "            closest_y = self.y_train[closest_indices] \n",
+    "\n",
+    "            from collections import Counter\n",
+    "            \n",
+    "            # 3 --- подсчет частоты меток\n",
+    "            vote_counts = Counter(closest_y)\n",
+    "            \n",
+    "            # 4 --- получаем метки с максимальным голосом (может быть несколько при ничьей)\n",
+    "            max_count = vote_counts.most_common(1)[0][1]\n",
+    "            winning_labels = [label for label, count in vote_counts.items() if count == max_count]\n",
+    "            \n",
+    "            # 5 --- азрешение ничьей: выбираем меньшую метку\n",
+    "            y_pred[i] = min(winning_labels) \n",
+    "\n",
+    "\n",
+    "        return y_pred\n"
    ]
   },
   {
@@ -75,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -100,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -116,7 +212,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m     toc = time.time()\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m toc - tic, output\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m knn_test.fit(\u001b[43mX_train\u001b[49m, y_train)\n\u001b[32m     12\u001b[39m np.random.seed(\u001b[32m42\u001b[39m)\n\u001b[32m     13\u001b[39m two_loop_time, out_2_loops = time_function(knn_test.compute_distances_two_loops, X_test)\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def time_function(f, *args):\n",
     "    \"\"\"\n",
@@ -269,7 +377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -283,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
